# acc-recomm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: paths.yaml
config/recommendation/: pipeline.yaml
config/rvt/: RvtBatch.Settings.json  RvtBatch.py  RvtBatch.txt
config/rvt/Tools/: BuildingComponent.py  BuildingComponentDependency.py  ComponentHandlerBase.py  ComponentHandlerColumn.py  ComponentHandlerDoor.py  ComponentHandlerSlab.py  ComponentHandlerStair.py  ComponentHandlerWall.py  DesignRevisionCore.py  ElementTargetSelector.py  GeneralSettings.py  GeometryHelper.py  ParameterBuilder.py  VisualizationHelper.py
data/output/case-autcon/: suggestions.json  suggestions_1.json  suggestions_2.json  suggestions_deepseek_deepseek-r1.json  suggestions_gpt-4o-mini.json  suggestions_gpt-4o.json
data/processed/rule/case-autcon/: issues.json
data/processed/rule/test-model-2025/: issues.json
data/processed/rvt/10296911/: v-slab.json  v-space.json
data/processed/rvt/case-autcon/: e-accessible_connectivity.json  e-adjacent_connectivity.json  e-locational_alignment.json  e-spatial_containment.json  e-structural_support.json  v-column.json  v-door.json  v-separationline.json  v-slab.json  v-space.json  v-stair.json  v-wall.json  v-window.json
data/processed/rvt/office-U-2storey/: e-accessible_connectivity.json  e-adjacent_connectivity.json  e-locational_alignment.json  e-spatial_containment.json  e-structural_support.json  v-column.json  v-door.json  v-separationline.json  v-space.json  v-stair.json  v-wall.json
data/processed/rvt/shop-2storey/: v-column.json  v-door.json  v-separationline.json  (+4 more)
notebooks/: explore_knowledge_graph.ipynb
scripts/: run_llm_pipeline.py  run_rvt_lpg.py  run_sol_acc.py  setup_environment.py
src/check/: BcfHandler.py  ModelProcessor.py  SolibriManager.py
src/common/: logger.py  paths.py
src/lpg/: AuthoringBatchRunner.py  RvtBatchRunner.py
src/recommendation/: adaptation_suggestion_generator.py  adaptation_suggestion_generator_graph.py  configuration.py  knowledge_graph_builder.py  neo4j.py
src/utils/: env_utils.py
(+13 files in other folders)
