[project]
name = "acc-recomm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.4.0",
    "beautifulsoup4==4.13.4",
    "bitsandbytes==0.45.3",
    "clingo==5.8.0",
    "dash==3.2.0",
    "dash-bio==1.0.2",
    "flask==3.1.2",
    "geoparse==2.0.4",
    "huggingface-hub==0.29.2",
    "ifcopenshell==0.8.1",
    "kaleido==0.2.1",
    "lark-parser==0.12.0",
    "matplotlib==3.10.1",
    "networkx==3.3",
    "numpy==2.2.3",
    "ollama==0.4.7",
    "openai==1.65.5",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentencepiece==0.2.0",
    "tokenizers==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
]

[dependency-groups]
dev = []
