[project]
name = "acc-recomm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0",
    "ipykernel",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "torch",
    "transformers",
    "neo4j",
    "ifcopenshell",
    "matplotlib",
    "networkx",
    "ipywidgets>=8.1.8",
    "pandas>=2.3.3",
    "rich>=14.2.0",
]

[dependency-groups]
dev = []

[tool.pyright]
extraPaths = ["src"]
